JDK changed to 11
JDK used in the project has been changed to JDK 11
One of the methods in ArrayList had to replaced with something else, because it didn't exist back in JDK 11